# MySQL_C

./: CMakeLists.txt  README.md  face_img.sql
include/: db_helper.h
src/: db_helper.cpp  main.cpp
